# obsidian-mitre-attack

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  __main__.py  config.yml  default-config.toml  default-config.yml  pyproject.toml  requirements.txt  sample.md
.github/: dependabot.yml
.github/linters/: .markdown-lint.yml
.github/workflows/: linter.yml  osv-scanner-scheduled.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
src/: markdown_generator.py  markdown_reader.py  models.py  stix_parser.py  view.py
src/obsidian-mitre-attack/: models.py
src/obsidian_mitre_attack/: __init__.py  markdown_generator.py  models.py  stix_parser.py
tests/: README.md  __init__.py  conftest.py  test_integration.py  test_markdown_generator.py  test_models.py  test_stix_parser.py
